--- a/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_find.xml
+++ b/SourceCode/Android/Zpotdrop/app/src/main/res/layout/fragment_find.xml
@@ -57,7 +57,7 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="@string/here"
-                android:textSize="@dimen/text_size_bold" />
+                android:textSize="@dimen/menu_left_text_size" />
 
             <com.zpotdrop.view.LightTextView
                 android:id="@+id/tv_there"
@@ -69,7 +69,7 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="@string/there"
-                android:textSize="@dimen/text_size_bold" />
+                android:textSize="@dimen/menu_left_text_size" />
 
         </LinearLayout>
 
@@ -82,7 +82,7 @@
             android:padding="10dp"
             android:text="@string/scan"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_bold" />
+            android:textSize="@dimen/menu_left_text_size" />
 
     </LinearLayout>
 
