--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/UI/Views/CollectionView/ScannedUserCell.xib
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/UI/Views/CollectionView/ScannedUserCell.xib
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B17" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScannedUserCell" id="gTV-IL-0wX" customClass="ScannedUserCell">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g3f-Us-3Ox">
+                        <rect key="frame" x="0.0" y="79" width="100" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OBT-jw-nfs">
-                        <rect key="frame" x="25" y="25" width="70" height="70"/>
+                        <rect key="frame" x="20" y="8" width="60" height="60"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C5v-xh-DdO">
-                                <rect key="frame" x="2" y="2" width="66" height="66"/>
+                                <rect key="frame" x="2" y="2" width="56" height="56"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.4549019608" green="0.75294117650000003" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="C5v-xh-DdO" secondAttribute="trailing" constant="2" id="7c1-om-oF8"/>
                             <constraint firstAttribute="bottom" secondItem="C5v-xh-DdO" secondAttribute="bottom" constant="2" id="DMQ-Tc-MRK"/>
+                            <constraint firstAttribute="width" constant="60" id="IvR-NW-ESF"/>
                             <constraint firstItem="C5v-xh-DdO" firstAttribute="top" secondItem="OBT-jw-nfs" secondAttribute="top" constant="2" id="JVg-oW-h4L"/>
                             <constraint firstItem="C5v-xh-DdO" firstAttribute="leading" secondItem="OBT-jw-nfs" secondAttribute="leading" constant="2" id="PeS-gv-Xas"/>
                         </constraints>
@@ -32,21 +39,26 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="OBT-jw-nfs" secondAttribute="trailing" constant="25" id="7PX-Cu-mIC"/>
-                <constraint firstAttribute="bottom" secondItem="OBT-jw-nfs" secondAttribute="bottom" constant="25" id="8e2-9k-xre"/>
-                <constraint firstItem="OBT-jw-nfs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="25" id="G3Y-aA-75q"/>
-                <constraint firstItem="OBT-jw-nfs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="25" id="lrk-Se-uWw"/>
+                <constraint firstAttribute="bottom" secondItem="OBT-jw-nfs" secondAttribute="bottom" constant="32" id="73M-wr-cPl"/>
+                <constraint firstItem="OBT-jw-nfs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="ACQ-ow-XEE"/>
+                <constraint firstAttribute="trailing" secondItem="g3f-Us-3Ox" secondAttribute="trailing" id="PXy-Af-rGw"/>
+                <constraint firstItem="g3f-Us-3Ox" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Qfi-xt-I3c"/>
+                <constraint firstItem="OBT-jw-nfs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Z51-Pu-H4H"/>
+                <constraint firstAttribute="bottom" secondItem="g3f-Us-3Ox" secondAttribute="bottom" id="che-q1-iIz"/>
+                <constraint firstItem="g3f-Us-3Ox" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="79" id="jCq-ok-ztw"/>
+                <constraint firstAttribute="trailing" secondItem="OBT-jw-nfs" secondAttribute="trailing" constant="20" id="osy-s2-rNM"/>
             </constraints>
             <size key="customSize" width="129" height="121"/>
             <connections>
-                <outlet property="_botConstraint" destination="8e2-9k-xre" id="Fxj-7H-ga0"/>
+                <outlet property="_botConstraint" destination="73M-wr-cPl" id="N2K-dg-8Qr"/>
                 <outlet property="_imgvAvatar" destination="C5v-xh-DdO" id="oC7-Ag-hli"/>
-                <outlet property="_leftConstraint" destination="lrk-Se-uWw" id="1wI-ac-1JD"/>
-                <outlet property="_rightConstraint" destination="7PX-Cu-mIC" id="mm4-sn-GgZ"/>
-                <outlet property="_topConstraint" destination="G3Y-aA-75q" id="FyJ-mj-auI"/>
+                <outlet property="_leftConstraint" destination="ACQ-ow-XEE" id="E5b-QN-GTj"/>
+                <outlet property="_nameLabel" destination="g3f-Us-3Ox" id="3Py-um-4mb"/>
+                <outlet property="_rightConstraint" destination="osy-s2-rNM" id="RlS-Xn-xyt"/>
+                <outlet property="_topConstraint" destination="Z51-Pu-H4H" id="LCI-UU-kAC"/>
                 <outlet property="_viewAvatar" destination="OBT-jw-nfs" id="ZRA-58-R0a"/>
             </connections>
-            <point key="canvasLocation" x="311.5" y="361.5"/>
+            <point key="canvasLocation" x="414" y="308"/>
         </collectionViewCell>
     </objects>
 </document>
